--- a/package.json
+++ b/package.json
@@ -25,22 +25,25 @@
     "url": "https://github.com/gaoyonggege/gfx/issues"
   },
   "homepage": "https://github.com/gaoyonggege/gfx#readme",
+  "engines": {
+    "node": ">= 9.8.0"
+  },
   "dependencies": {
-    "@nestjs/common": "^4.5.9",
-    "@nestjs/core": "^4.5.10",
-    "@nestjs/microservices": "^4.5.8",
-    "@nestjs/testing": "^4.5.5",
+    "@nestjs/common": "^4.6.6",
+    "@nestjs/core": "^4.6.6",
+    "@nestjs/microservices": "^4.6.6",
+    "@nestjs/testing": "^4.6.6",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "reflect-metadata": "^0.1.12",
-    "rxjs": "^5.5.6",
-    "typescript": "^2.6.2"
+    "rxjs": "^5.5.7",
+    "typescript": "^2.7.2"
   },
   "devDependencies": {
     "@types/express": "^4.11.1",
-    "@types/node": "^9.3.0",
-    "nodemon": "^1.14.1",
-    "ts-node": "^4.1.0",
-    "tslint": "5.3.2"
+    "@types/node": "^9.4.7",
+    "nodemon": "^1.17.2",
+    "ts-node": "^5.0.1",
+    "tslint": "^5.9.1"
   }
 }
